feat: add jwt authentication