@@ -1,6 +1,7 @@
 package com.devs.roamance.config;
 
 import java.util.Arrays;
+import java.util.Collections;
 import java.util.List;
 
 import com.devs.roamance.security.AuthTokenFilter;
@@ -68,7 +69,7 @@ public class SecurityConfig {
 
             CorsConfiguration cfg = new CorsConfiguration();
 
-            cfg.setAllowedOrigins(List.of(frontendUrl));
+            cfg.setAllowedOrigins(Collections.singletonList(frontendUrl));
             cfg.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "DELETE"));
             cfg.setAllowedHeaders(Arrays.asList("Authorization", "Content-Type"));
             cfg.setExposedHeaders(List.of("Authorization"));
